# girsanov-uq

./: .gitignore  CITATION.cff  DATA.md  LICENSE  README.md  pyproject.toml
notebooks/: muller_brown.ipynb  pops_uncertainty_pipeline_1d.ipynb  simple_ams_reweighting_1d.ipynb
scripts/: copy_ini_conds.py
scripts/AMS_1D/: post_process.ipynb  train_with_pops.ipynb
scripts/AMS_1D/ams_fit/: run_pipeline.py
scripts/AMS_1D/ams_target/: aggregate_reweighting.py  run_all
scripts/AMS_butane/: README.md
scripts/AMS_butane/ams_runs_mp0a_200/: job  make_input_files.py  run_all_topaze  run_ams.py
scripts/AMS_butane/ams_runs_mp0a_300/: run_all_topaze  run_ams.py  t_loop.txt
scripts/AMS_butane/ams_runs_mp0a_500/: compute_probs.py  make_input_files.py  run_ams.py
scripts/AMS_butane/ams_runs_mpa_200/: make_input_files.py  results_prob.txt  run_ams.py
scripts/AMS_butane/ams_runs_mpa_300/: results_prob.txt  run_ams.py  t_loop.txt
scripts/AMS_butane/ams_runs_mpa_500/: make_input_files.py  results_prob.txt  run_ams.py
scripts/AMS_butane/ams_runs_omat0_200/: run_ams.py
scripts/AMS_butane/ams_runs_omat0_300/: get_loop_times.py  run_all_topaze  run_ams.py  t_loop.txt
scripts/AMS_butane/ams_runs_omat0_500/: run_all_topaze  run_ams.py
scripts/AMS_butane/plots/: plot_L_three_cases.py  plot_samples.py  (+3 more)
scripts/AMS_dimers/: post_process.ipynb
scripts/AMS_muller_brown/: create_folders.py  post_process.ipynb
scripts/theory/: 2D.ipynb  2D.py  __init__.py  plot.ipynb  theory_variance_1D.ipynb  utils.py
src/girsanov_uq/: __init__.py
tests/: test_imports.py
(+113 files in other folders)
