[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "girsanov-uq"
version = "0.1.0"
description = "Project-specific code and notebooks for AMS + Girsanov studies built on top of aseams."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aseams @ git+https://github.com/thomaspigeon/aseams.git",
    "scikit-learn",
    "mace-torch",
    "popsregression",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
